care/force-app/main/default/objects/Review_Reference__c/Review_Reference__c.object-meta.xml
<CustomObject>
    <description>Basic information for the CS team to acquire references.  Gathered typically through the Contract Composer</description>
    <label>Review Reference</label>
    <nameField>
        <displayFormat>RR-{0}</displayFormat>
        <label>Review Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>