care/force-app/main/default/objects/Review_Reference__c/fields/Galore_Review_uuid__c.field-meta.xml
<CustomField>
    <fullName>Galore_Review_uuid__c</fullName>
    <label>Galore Review uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>