care/force-app/main/default/objects/Review_Reference__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name</description>
    <label>Last Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>