care/force-app/main/default/objects/Review_Reference__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional lookup to the location referenced.</description>
    <label>Location</label>
    <referenceTo>Opportunity_Service_Area__c</referenceTo>
    <relationshipLabel>Review References</relationshipLabel>
    <relationshipName>Review_References</relationshipName>
    <type>Lookup</type>
</CustomField>