care/force-app/main/default/objects/Review_Reference__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An updated was requested but the API responded with an error, thus the record is locked from further updates.</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>