care/force-app/main/default/objects/Review_Reference__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>